Map madical-app with PatientsController

--- a/medical-app/src/app/patient/patient-list/patient-list.component.html
+++ b/medical-app/src/app/patient/patient-list/patient-list.component.html
@@ -1,3 +1,46 @@
-<p>
-  patient-list works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <section>
+        <header class="header">
+          <div class="row">
+            <div class="col-md-4">
+              <h1>Patients</h1>
+            </div>
+            <div class="col-md-6">
+
+            </div>
+            <div class="col-md-2">
+
+            </div>
+          </div>
+
+        </header>
+      </section>
+
+      <section class="main">
+
+        <table class="table">
+          <thead>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Medical Note</th>
+            <th></th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let patient of patients">
+            <th scope="row">{{patient.id}}</th>
+            <td>{{patient.name}}</td>
+            <td>{{patient.medicalNote}}</td>
+            <td>
+            </td>
+          </tr>
+
+          </tbody>
+        </table>
+      </section>
+    </div>
+  </div>
+</div>
