--- a/medical-app/src/app/patient/patient-create/patient-create.component.html
+++ b/medical-app/src/app/patient/patient-create/patient-create.component.html
@@ -1,3 +1,29 @@
-<p>
-  patient-create works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <section>
+        <form novalidate [formGroup]="patientForm" (ngSubmit)="onSubmit()">
+          <fieldset>
+            <div class="form-group">
+              <label>Name</label>
+              <input type="text"
+                     class="form-control"
+                     formControlName="name">
+            </div>
+
+            <div class="form-group">
+              <label>Medical Note</label>
+              <input type="text"
+                     class="form-control"
+                     formControlName="medicalNote">
+            </div>
+          </fieldset>
+
+          <button type="submit" class="btn btn-primary"  [disabled]="!patientForm.valid" >Submit</button>
+          <button type="button" class="btn btn-warning" (click)="redirectPatientPage()">Cancel</button>
+          <pre>{{patientForm.value | json}}</pre>
+        </form>
+      </section>
+    </div>
+  </div>
+</div>
