--- a/medical-app/src/app/app.component.html
+++ b/medical-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to Medical Base
+    Welcome to {{title}}
   </h1>
 </div>
 
