--- a/medical-app/src/app/app.component.html
+++ b/medical-app/src/app/app.component.html
@@ -1,9 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}
-  </h1>
-</div>
+<main>
+  <div class="container">
+    <app-patient-list></app-patient-list>
+  </div>
 
-
-<router-outlet></router-outlet>
+  <!--<router-outlet></router-outlet>-->
+</main>
