Navigate on patient list. Open patient details.

--- a/medical-app/src/app/app.component.html
+++ b/medical-app/src/app/app.component.html
@@ -1,7 +1,5 @@
 <main>
-  <div class="container">
-    <app-patient-list></app-patient-list>
-  </div>
+  <app-patients-panel></app-patients-panel>
 
-  <!--<router-outlet></router-outlet>-->
+  <router-outlet></router-outlet>
 </main>
