--- a/medical-app/src/app/app.component.css
+++ b/medical-app/src/app/app.component.css
@@ -1,13 +1,10 @@
 main {
-  margin-top: 3rem;
-}
-
-.container{
+  margin-top: 1rem;
   display: flex;
 }
 
-@media only screen and (max-width: 768px) {
-  .read-more {
-    text-align: center;
-  }
-}
+/*@media only screen and (max-width: 768px) {*/
+  /*.read-more {*/
+    /*text-align: center;*/
+  /*}*/
+/*}*/
