--- a/medical-app/src/app/components/patient-list/patient-list.component.css
+++ b/medical-app/src/app/components/patient-list/patient-list.component.css
@@ -1,8 +1,17 @@
+.container{
+  width: 30%;
+  min-width: 400px;
+}
+
 .patient-list-item{
   border-bottom: solid;
   border-width: thin;
   border-bottom-color: rgba(187, 180, 180, 0.5);
   padding: 10px 25px 10px 25px;
+}
+
+.patient-list-item:active {
+  background-color: rgba(187, 180, 180, 0.45);
 }
 
 #patient-name{
