--- a/medical-app/src/app/components/patient-list/patient-list.component.html
+++ b/medical-app/src/app/components/patient-list/patient-list.component.html
@@ -1,20 +1,20 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<div class="container"  *ngFor="let patient of patients">
 
-<div class="container">
-  <div *ngFor="let patient of patients">
+  <div class="patient-list-item" (click)="openPatientDetails(patient)">
 
-    <div class="patient-list-item" (click)="openPatientDetails(patient)">
-
-      <div *ngIf="patient.sex=='MALE'; else female">
-        <img src="assets/images/gender-male.png" align="right"  alt={{patient.sex}}>
-      </div>
-
-      <ng-template #female>
-        <img  src="assets/images/gender-female.png" align="right"  alt={{patient.sex}}>
-      </ng-template>
-
-      <div id="patient-name">{{patient.firstName}} {{patient.lastName}}</div>
-      <div><small>{{patient.birthDate | date}}</small></div>
+    <div *ngIf="patient.sex=='MALE'; else female">
+      <img src="assets/images/gender-male.png" align="right" alt={{patient.sex}}>
     </div>
+
+    <ng-template #female>
+      <img src="assets/images/gender-female.png" align="right" alt={{patient.sex}}>
+    </ng-template>
+
+    <div id="patient-name">{{patient.firstName}} {{patient.lastName}}</div>
+    <div>
+      <small>{{patient.birthDate | date}}</small>
+    </div>
+
   </div>
 </div>
+
