--- a/medical-app/src/app/components/search-block/search-block.component.html
+++ b/medical-app/src/app/components/search-block/search-block.component.html
@@ -3,7 +3,7 @@
 
   <button>Search</button>
 
-  <button>Add patient</button>
+  <a class="btn btn-info" routerLink="/patient/create">Add patient</a>
 
   <hr/>
 
