Parent-Child component interaction. Remove unused components.

--- a/medical-app/src/app/app.component.html
+++ b/medical-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <app-patients-panel></app-patients-panel>
+  <app-patient-list></app-patient-list>
 
   <router-outlet></router-outlet>
 </main>
