--- a/medical-app/src/app/components/patient-create/patient-create.component.html
+++ b/medical-app/src/app/components/patient-create/patient-create.component.html
@@ -1,5 +1,49 @@
-<div>
-  <app-patient-details-header></app-patient-details-header>
-  <app-patient-info-input-block></app-patient-info-input-block>
+<div class="container">
 
+  <app-patient-details-header [patient] = "patient"></app-patient-details-header>
+
+  <section>
+    <form novalidate [formGroup]="patientForm" (ngSubmit)="onSubmit()">
+      <fieldset>
+
+        <div class="form-group">
+          <label>First Name:</label>
+          <input type="text" class="form-control" formControlName="firstName">
+        </div>
+
+        <div class="form-group">
+          <label>Last Name:</label>
+          <input type="text" class="form-control" formControlName="lastName">
+        </div>
+
+        <div class="form-group">
+          <label>Date of birth:</label>
+          <input type="date" class="form-control" formControlName="birthDate">
+        </div>
+
+        <div class="form-group">
+          <label>Gender:</label>
+          <input type="radio" name="sex" class="form-control" formControlName="sex" value="MALE" checked> Male
+          <input type="radio" name="sex" class="form-control" formControlName="sex" value="FEMALE"> Female
+        </div>
+
+        <div class="form-group">
+          <label>Country:</label>
+          <input type="text" class="form-control" formControlName="country">
+        </div>
+
+        <div class="form-group">
+          <label>State:</label>
+          <input type="text" class="form-control" formControlName="state">
+        </div>
+
+        <div class="form-group">
+          <label>Address:</label>
+          <input type="text" class="form-control" formControlName="address">
+        </div>
+
+      </fieldset>
+
+    </form>
+  </section>
 </div>
