--- a/medical-app/src/app/components/patient-list/patient-list.component.html
+++ b/medical-app/src/app/components/patient-list/patient-list.component.html
@@ -1,20 +1,23 @@
-<div class="container"  *ngFor="let patient of patients">
+<div class="container">
+  <app-search-block></app-search-block>
 
-  <div class="patient-list-item" (click)="openPatientDetails(patient)">
+  <div *ngFor="let patient of patients">
 
-    <div *ngIf="patient.sex=='MALE'; else female">
-      <img src="assets/images/gender-male.png" align="right" alt={{patient.sex}}>
+    <div class="patient-list-item" (click)="openPatientDetails(patient)">
+
+      <div *ngIf="patient.sex=='MALE'; else female">
+        <img src="assets/images/gender-male.png" align="right" alt={{patient.sex}}>
+      </div>
+
+      <ng-template #female>
+        <img src="assets/images/gender-female.png" align="right" alt={{patient.sex}}>
+      </ng-template>
+
+      <div id="patient-name">{{patient.firstName}} {{patient.lastName}}</div>
+      <div>
+        <small>{{patient.birthDate | date}}</small>
+      </div>
+
     </div>
-
-    <ng-template #female>
-      <img src="assets/images/gender-female.png" align="right" alt={{patient.sex}}>
-    </ng-template>
-
-    <div id="patient-name">{{patient.firstName}} {{patient.lastName}}</div>
-    <div>
-      <small>{{patient.birthDate | date}}</small>
-    </div>
-
   </div>
 </div>
-
