--- a/medical-app/src/app/components/patient-details-header/patient-details-header.component.html
+++ b/medical-app/src/app/components/patient-details-header/patient-details-header.component.html
@@ -4,7 +4,7 @@
     <span class="fullNameView">{{patient.firstName}} {{patient.lastName}}</span>
     <span class="ageView">{{calculateAge(patient.birthDate)}} y.o.</span>
     <button>Edit</button>
-    <button>Delete</button>
+    <button (click)="onDeletePatientClick(patient)">Delete</button>
 
   </div>
 
