--- a/medical-app/src/app/components/patient-details-header/patient-details-header.component.html
+++ b/medical-app/src/app/components/patient-details-header/patient-details-header.component.html
@@ -1,18 +1,10 @@
 <div class="container">
 
-  <div *ngIf="patient; else newPatient">
-    <span class="fullNameView">{{patient.firstName}} {{patient.lastName}}</span>
-    <span class="ageView">{{calculateAge(patient.birthDate)}} y.o.</span>
-    <button>Edit</button>
-    <button (click)="onDeletePatientClick(patient)">Delete</button>
+  <span class="fullNameView">{{patient.firstName}} {{patient.lastName}}</span>
+  <span class="ageView">{{calculateAge(patient.birthDate)}} y.o.</span>
 
-  </div>
-
-  <ng-template #newPatient>
-    <span class="fullNameView">New Patient</span>
-    <button (click)="onSavePatientClick()"> Save</button>
-    <button>Cancel</button>
-  </ng-template>
+  <a class="btn btn-info" routerLink="/patient/edit/{{patient.id}}">Edit</a>
+  <button (click)="onDeletePatientClick(patient)">Delete</button>
 
   <hr/>
 
