--- a/medical-app/src/app/components/patient-list/patient-list.component.html
+++ b/medical-app/src/app/components/patient-list/patient-list.component.html
@@ -1,23 +1,6 @@
 <div class="container">
   <app-search-block></app-search-block>
 
-  <div *ngFor="let patient of patients">
-
-    <div class="patient-list-item" (click)="openPatientDetails(patient)">
-
-      <div *ngIf="patient.sex=='MALE'; else female">
-        <img src="assets/images/gender-male.png" align="right" alt={{patient.sex}}>
-      </div>
-
-      <ng-template #female>
-        <img src="assets/images/gender-female.png" align="right" alt={{patient.sex}}>
-      </ng-template>
-
-      <div id="patient-name">{{patient.firstName}} {{patient.lastName}}</div>
-      <div>
-        <small>{{patient.birthDate | date}}</small>
-      </div>
-
-    </div>
-  </div>
+  <app-patient-list-item *ngFor="let patient of patients" [patient] = "patient">
+  </app-patient-list-item>
 </div>
