--- a/medical-app/src/app/components/comment-list-item/comment-list-item.component.html
+++ b/medical-app/src/app/components/comment-list-item/comment-list-item.component.html
@@ -2,7 +2,7 @@
   <div class="comment-list-item">
 
     <div>
-      <small>{{comment.createdDate | date}}</small>
+      <small>{{comment.createDate | date}}</small>
     </div>
     <div>{{comment.text}}</div>
 
