Implement patints search

--- a/medical-app/src/app/components/patient-list/patient-list.component.html
+++ b/medical-app/src/app/components/patient-list/patient-list.component.html
@@ -1,6 +1,16 @@
 <div class="container">
-  <app-search-block></app-search-block>
 
-  <app-patient-list-item *ngFor="let patient of patients" [patient] = "patient">
+  <div class="listHeaderBlock">
+    <input [(ngModel)]="searchPatientText" placeholder="Search">
+
+    <a class="btn btn-info" routerLink="/patient/create">Add patient</a>
+
+    <hr/>
+
+  </div>
+
+
+
+  <app-patient-list-item *ngFor="let patient of patients | filter : searchPatientText" [patient] = "patient">
   </app-patient-list-item>
 </div>
