--- a/medical-app/src/app/components/search-block/search-block.component.html
+++ b/medical-app/src/app/components/search-block/search-block.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <input placeholder="Enter patient name">
+  <input [(ngModel)]="searchPatientText" placeholder="Search">
 
   <button>Search</button>
 
