--- a/medical-app/src/app/components/patient-list/patient-list.component.css
+++ b/medical-app/src/app/components/patient-list/patient-list.component.css
@@ -2,3 +2,23 @@
   width: 30%;
   min-width: 450px;
 }
+
+.listHeaderBlock{
+  border-bottom: solid;
+  border-width: inherit;
+  border-bottom-color: rgb(0, 0, 0);
+}
+
+a {
+  margin: 0;
+  border-radius: 2px;
+  border: none;
+  background-color: rgb(33, 150, 88);
+  color: white;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin-left: 10px;
+}
