--- a/medical-app/src/app/components/comments-list/comments-list.component.html
+++ b/medical-app/src/app/components/comments-list/comments-list.component.html
@@ -1,7 +1,3 @@
 <div class="container">
-
-
-  <app-comment-list-item *ngFor="let comment of comments" [comment] = "comment">
-  </app-comment-list-item>
-
+  <app-comment-list-item *ngFor="let comment of comments" [comment]="comment"></app-comment-list-item>
 </div>
