--- a/medical-app/src/app/components/patient-list-item/patient-list-item.component.css
+++ b/medical-app/src/app/components/patient-list-item/patient-list-item.component.css
@@ -2,7 +2,11 @@
   border-bottom: solid;
   border-width: thin;
   border-bottom-color: rgba(187, 180, 180, 0.5);
-  padding: 10px 25px 10px 25px;
+  padding: 10px 0px 10px 0px;
+}
+
+.patient-list-item:hover {
+  background-color: rgba(187, 180, 180, 0.45);
 }
 
 .patient-list-item:active {
