--- a/medical-app/src/app/components/patient-list-item/patient-list-item.component.html
+++ b/medical-app/src/app/components/patient-list-item/patient-list-item.component.html
@@ -1,16 +1,22 @@
-<div class="patient-list-item" (click)="openPatientDetails(patient)">
+<div class="row align-items-center patient-list-item" (click)="openPatientDetails(patient)">
 
-  <div *ngIf="patient.sex=='MALE'; else female">
-    <img src="assets/images/gender-male.png" align="right" alt={{patient.sex}}>
+  <div class="col-8">
+    <div id="patient-name">{{patient.firstName}} {{patient.lastName}}</div>
+    <div>
+      <small>{{patient.birthDate | date}}</small>
+    </div>
+
   </div>
 
-  <ng-template #female>
-    <img src="assets/images/gender-female.png" align="right" alt={{patient.sex}}>
-  </ng-template>
+  <div class="col-4">
+    <div *ngIf="patient.sex=='MALE'; else female">
+      <img src="assets/images/gender-male.png" align="right" alt={{patient.sex}}>
+    </div>
 
-  <div id="patient-name">{{patient.firstName}} {{patient.lastName}}</div>
-  <div>
-    <small>{{patient.birthDate | date}}</small>
+    <ng-template #female>
+      <img src="assets/images/gender-female.png" align="right" alt={{patient.sex}}>
+    </ng-template>
   </div>
+
 
 </div>
