--- a/medical-app/src/app/components/patient-list/patient-list.component.css
+++ b/medical-app/src/app/components/patient-list/patient-list.component.css
@@ -1,10 +1,10 @@
 .container{
   width: 30%;
   min-width: 450px;
+  background-color: #424242;
 }
 
 .listHeaderBlock{
-  background: #424242;
   padding: 25px 10px 25px 10px;
 }
 
@@ -13,6 +13,10 @@
   margin-left: auto;
 }
 
+hr{
+  margin: 0px;
+  background-color: white;
+}
 
 /*a {*/
   /*border-radius: 2px;*/
