Patient Details UI

--- a/medical-app/src/app/app.component.html
+++ b/medical-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <app-patient-list></app-patient-list>
+  <app-patient-list class="patients-list"></app-patient-list>
 
-  <router-outlet></router-outlet>
+  <router-outlet  class="content"></router-outlet>
 </main>
