--- a/medical-app/src/app/components/comments-block/comments-block.component.html
+++ b/medical-app/src/app/components/comments-block/comments-block.component.html
@@ -1,6 +1,11 @@
 <div class="container">
 
-  <app-comments-list></app-comments-list>
+  <strong class="title">Comments:</strong>
+
+  <div class="comments-list">
+    <app-comments-list></app-comments-list>
+  </div>
+
   <app-create-comment-block></app-create-comment-block>
 
 </div>
