--- a/medical-app/src/app/components/comment-list-item/comment-list-item.component.html
+++ b/medical-app/src/app/components/comment-list-item/comment-list-item.component.html
@@ -1,6 +1,7 @@
 <div class="comment-list-item">
 
   <small>{{comment.createDate | date}}</small>
-  <div>{{comment.text}}</div>
+  <br/>
+  <strong>{{comment.text}}</strong>
 
 </div>
