--- a/medical-app/src/app/components/create-comment-block/create-comment-block.component.css
+++ b/medical-app/src/app/components/create-comment-block/create-comment-block.component.css
@@ -1,3 +1,11 @@
-.container{
-  display: inline;
+input{
+  background-color: transparent;
+  border: 2px solid black;
+  border-radius: 0;
+}
+
+.btn{
+  border: 2px solid black;
+  border-radius: 0;
+  float: right;
 }
