--- a/medical-app/src/app/components/patient-create-header/patient-create-header.component.html
+++ b/medical-app/src/app/components/patient-create-header/patient-create-header.component.html
@@ -1,17 +1,22 @@
-<div class="container">
+<div class="row align-items-center justify-content-between patient-details-header">
 
 
-  <div *ngIf="patient; else newPatient">
-    <span class="fullNameView">{{patient.firstName}} {{patient.lastName}}</span>
+  <div class="row col-8 justify-content-start">
+
+    <div *ngIf="patient; else newPatient">
+      <strong>{{patient.firstName}} {{patient.lastName}}</strong>
+    </div>
+
+    <ng-template #newPatient>
+      <strong>New Patient</strong>
+    </ng-template>
   </div>
 
-  <ng-template #newPatient>
-    <span class="fullNameView">New Patient</span>
-  </ng-template>
+  <div class="row col-4 justify-content-end">
 
-  <button (click)="onSavePatientClick()"> Save</button>
-  <button>Cancel</button>
+    <button class="col-4 btn btn-outline-dark" type="button" (click)="onSavePatientClick()">Save</button>
 
-  <hr/>
+    <button type="button" class="col-4 btn btn-outline-dark">Cancel</button>
+  </div>
 
 </div>
