--- a/medical-app/src/app/components/patient-create/patient-create.component.html
+++ b/medical-app/src/app/components/patient-create/patient-create.component.html
@@ -1,49 +1,72 @@
 <div class="container">
 
-  <app-patient-create-header [patient] = "patient"></app-patient-create-header>
+  <app-patient-create-header [patient]="patient"></app-patient-create-header>
 
-  <section>
+  <hr/>
+
+  <section class="patient-details">
     <form novalidate [formGroup]="patientForm" (ngSubmit)="onSubmit()">
       <fieldset>
 
-        <div class="form-group">
-          <label>First Name:</label>
-          <input type="text" class="form-control" formControlName="firstName">
+        <div class="row form-group">
+          <strong class="col-2">First Name:</strong>
+          <input type="text" class="col-4 form-control form-control-sm" formControlName="firstName"
+                 aria-describedby="inputGroup-sizing-default">
         </div>
 
-        <div class="form-group">
-          <label>Last Name:</label>
-          <input type="text" class="form-control" formControlName="lastName">
+        <div class="row form-group">
+          <strong class="col-2">Last Name:</strong>
+          <input type="text" class="col-4 form-control form-control-sm" formControlName="lastName"
+                 aria-describedby="inputGroup-sizing-default">
         </div>
 
-        <div class="form-group">
-          <label>Date of birth:</label>
-          <input type="date" class="form-control" formControlName="birthDate">
+        <div class="row form-group">
+          <strong class="col-2">Date of birth:</strong>
+          <input type="date" class="col-4 form-control form-control-sm" formControlName="birthDate"
+                 aria-describedby="inputGroup-sizing-default">
         </div>
 
-        <div class="form-group">
-          <label>Gender:</label>
-          <input type="radio" name="sex" class="form-control" formControlName="sex" value="MALE" checked> Male
-          <input type="radio" name="sex" class="form-control" formControlName="sex" value="FEMALE"> Female
+        <div class="row form-group">
+          <strong class="col-2">Sex:</strong>
+
+          <div class="col-4">
+
+            <label class="radio-inline">
+              <input type="radio" class="radio-btn" name="sex" formControlName="sex" value="MALE" checked>Male
+            </label>
+
+            <label class="radio-inline">
+              <input type="radio" class="radio-btn" name="sex" formControlName="sex" value="FEMALE">Female
+            </label>
+
+
+          </div>
+
         </div>
 
-        <div class="form-group">
-          <label>Country:</label>
-          <input type="text" class="form-control" formControlName="country">
+        <div class="row form-group">
+          <strong class="col-2">Country:</strong>
+          <input type="text" class="col-4 form-control form-control-sm" formControlName="country"
+                 aria-describedby="inputGroup-sizing-default">
         </div>
 
-        <div class="form-group">
-          <label>State:</label>
-          <input type="text" class="form-control" formControlName="state">
+        <div class="row form-group">
+          <strong class="col-2">State:</strong>
+          <input type="text" class="col-4 form-control form-control-sm" formControlName="state"
+                 aria-describedby="inputGroup-sizing-default">
         </div>
 
-        <div class="form-group">
-          <label>Address:</label>
-          <input type="text" class="form-control" formControlName="address">
+        <div class="row form-group">
+          <strong class="col-2">Address:</strong>
+          <input type="text" class="col-4 form-control form-control-sm" formControlName="address"
+                 aria-describedby="inputGroup-sizing-default">
         </div>
 
       </fieldset>
 
     </form>
   </section>
+
 </div>
+
+
