Regirct to next patient after current was removed

--- a/medical-app/src/app/app.component.html
+++ b/medical-app/src/app/app.component.html
@@ -1,7 +1,6 @@
 <main>
   <app-patient-list class="patients-list"></app-patient-list>
 
-  <hr/>
+  <router-outlet></router-outlet>
 
-  <router-outlet  class="content"></router-outlet>
 </main>
