--- a/medical-app/src/app/components/patient-create-header/patient-create-header.component.html
+++ b/medical-app/src/app/components/patient-create-header/patient-create-header.component.html
@@ -16,7 +16,7 @@
 
     <button class="col-4 btn btn-outline-dark" type="button" (click)="onSavePatientClick()">Save</button>
 
-    <button type="button" class="col-4 btn btn-outline-dark">Cancel</button>
+    <a role="button" class="col-4 btn btn-outline-dark" (click)="goBack()">Cancel</a>
   </div>
 
 </div>
