--- a/medical-app/src/app/components/patient-details-header/patient-details-header.component.html
+++ b/medical-app/src/app/components/patient-details-header/patient-details-header.component.html
@@ -1,4 +1,4 @@
-<div class="row align-items-center justify-content-between patient-details-header">
+<div class="row align-items-center justify-content-between sticky-top patient-details-header">
 
   <div class="row col-8 justify-content-start">
 
