--- a/medical-app/src/app/components/patient-details/patient-details.component.html
+++ b/medical-app/src/app/components/patient-details/patient-details.component.html
@@ -40,7 +40,12 @@
 
     <div class="col-8">
       <app-comments-block></app-comments-block>
+
+      <alert></alert>
+
     </div>
 
   </div>
+
+
 </div>
