--- a/medical-app/src/app/components/patient-details/patient-details.component.css
+++ b/medical-app/src/app/components/patient-details/patient-details.component.css
@@ -1,5 +1,6 @@
 .container{
   min-width: 950px;
+  height: 100%;
 }
 
 .main-content{
@@ -19,4 +20,10 @@
 hr{
   background-color: #363636;
   margin: 5px 0 0 0;
+}
+
+alert{
+  position: absolute;
+  top: 0;
+  right: 0;
 }
