--- a/medical-app/src/app/components/patient-list/patient-list.component.html
+++ b/medical-app/src/app/components/patient-list/patient-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="row align-items-center listHeaderBlock">
+  <div class="row align-items-center sticky-top listHeaderBlock">
 
     <input type="text" class="col-7 form-control" [(ngModel)]="searchPatientText"
            placeholder="Search" aria-describedby="inputGroup-sizing-default">
