--- a/medical-app/src/app/components/create-comment-block/create-comment-block.component.html
+++ b/medical-app/src/app/components/create-comment-block/create-comment-block.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-between">
 
-  <div class="col-10">
+  <div class="col-8">
     <section>
       <form novalidate [formGroup]="commentForm">
         <fieldset>
@@ -16,8 +16,19 @@
     </section>
   </div>
 
-  <div class="col-2">
-    <button class="btn btn-primary btn-outline-dark" type="button" (click)="addComment()">Add</button>
+
+  <div class="col-4" *ngIf="edit; else create">
+    <div class="row justify-content-between">
+      <button class="col btn btn-primary btn-outline-dark" type="button" (click)="saveChanges()">Save</button>
+      <button class="col btn btn-primary btn-outline-dark" type="button" (click)="cancel()">Cancel</button>
+    </div>
   </div>
+
+  <ng-template #create>
+    <div class="col-2">
+      <button class="btn btn-primary btn-outline-dark" type="button" (click)="addComment()">Add</button>
+    </div>
+  </ng-template>
+
 
 </div>
