--- a/medical-app/src/app/components/comment-list-item/comment-list-item.component.html
+++ b/medical-app/src/app/components/comment-list-item/comment-list-item.component.html
@@ -2,6 +2,6 @@
 
   <small>{{comment.createDate | date}}</small>
   <br/>
-  <strong>{{comment.text}}</strong>
+  <p><strong>{{comment.text}}</strong></p>
 
 </div>
