--- a/medical-app/src/app/components/patient-create/patient-create.component.css
+++ b/medical-app/src/app/components/patient-create/patient-create.component.css
@@ -1,28 +1,13 @@
-.container{
-  min-width: 950px;
-}
-
-
 .patient-details{
-  padding: 30px 15px 30px 15px;
-}
-
-
-.radio-btn{
-  padding-right: 10px;
+  padding: 30px 0 30px 0;
 }
 
 .radio-inline{
   margin-right: 15px;
 }
-hr{
-  background-color: #363636;
-  margin: 5px 0 0 0;
-}
 
-
-input, btn{
+input, .btn{
   border-color: black;
   border-width: 2px;
-  border-radius: 0px;
+  border-radius: 0;
 }
