--- a/medical-app/src/app/components/patient-details/patient-details.component.html
+++ b/medical-app/src/app/components/patient-details/patient-details.component.html
@@ -1,11 +1,10 @@
 <div class="container">
   <app-patient-details-header [patient]="patient"></app-patient-details-header>
 
-  <hr/>
 
-  <div class="row justify-content-between main-content">
+  <div class="row main-content">
 
-    <div class="col-4 patient-details">
+    <div class="patient-details">
 
       <div class="row patient-info">
         <strong class="col">Date of birth: </strong>
@@ -38,7 +37,7 @@
 
     </div>
 
-    <div class="col-8">
+    <div class="comments-block">
       <app-comments-block></app-comments-block>
 
       <alert></alert>
