--- a/medical-app/src/app/app.component.html
+++ b/medical-app/src/app/app.component.html
@@ -1,6 +1,16 @@
 <main>
-  <app-patient-list class="patients-list"></app-patient-list>
 
-  <router-outlet></router-outlet>
+  <div class="row">
+    <div class="side">
+      <app-patient-list></app-patient-list>
+    </div>
+
+    <div class="vl"></div>
+
+    <div class="main">
+      <router-outlet></router-outlet>
+    </div>
+
+  </div>
 
 </main>
