--- a/medical-app/src/app/components/patient-list/patient-list.component.css
+++ b/medical-app/src/app/components/patient-list/patient-list.component.css
@@ -1,21 +1,26 @@
-.listHeaderBlock{
-  padding: 25px 10px 25px 10px;
+.row {
+  padding-bottom: 15px;
   background-color: white;
+  border-bottom: 2px solid black;
 }
 
-.btn{
+.btn {
   margin-left: auto;
   border-width: 2px;
   border-radius: 0px;
 }
 
-input{
+/*.patients-list{*/
+  /*overflow-y: scroll;*/
+/*}*/
+
+input {
   border-color: black;
   border-width: 2px;
-  border-radius: 0px;
+  border-radius: 0;
 }
 
-hr{
+hr {
   background-color: #363636;
   margin: 5px 0px 0px 0px;
 }
