--- a/medical-app/src/app/components/patient-list/patient-list.component.html
+++ b/medical-app/src/app/components/patient-list/patient-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="row align-items-center sticky-top listHeaderBlock">
+  <div class="row align-items-center sticky-top">
 
     <input type="text" class="col-7 form-control" [(ngModel)]="searchPatientText"
            placeholder="Search" aria-describedby="inputGroup-sizing-default">
@@ -8,12 +8,10 @@
     <a class="col-4 btn btn-outline-dark" routerLink="/patient/create" role="button">Add patient</a>
   </div>
 
-  <hr/>
-
-  <div>
-    <app-patient-list-item *ngFor="let patient of patients | filter : searchPatientText" [patient]="patient">
-    </app-patient-list-item>
-  </div>
+    <div class="patients-list">
+      <app-patient-list-item  *ngFor="let patient of patients | filter : searchPatientText" [patient]="patient">
+      </app-patient-list-item>
+    </div>
 
 
 </div>
