--- a/medical-app/src/app/comments/components/comments-block/comments-block.component.html
+++ b/medical-app/src/app/comments/components/comments-block/comments-block.component.html
@@ -6,6 +6,8 @@
     <app-comments-list></app-comments-list>
   </div>
 
-  <app-create-comment-block></app-create-comment-block>
+  <div class="input-block">
+    <app-create-comment-block></app-create-comment-block>
+  </div>
 
 </div>
