--- a/medical-app/src/app/patients/components/patient-create-header/patient-create-header.component.html
+++ b/medical-app/src/app/patients/components/patient-create-header/patient-create-header.component.html
@@ -1,4 +1,6 @@
-<div class="row align-items-center justify-content-between container">
+<div class="sticky-top">
+
+<div class="row align-items-center justify-content-between header">
 
 
   <div class="row col-4 justify-content-start">
@@ -19,4 +21,5 @@
     <button class="col-4 btn btn-outline-dark" role="button" (click)="goBack()">Cancel</button>
   </div>
 
+</div>
 </div>
