--- a/medical-app/src/app/app.component.css
+++ b/medical-app/src/app/app.component.css
@@ -5,14 +5,14 @@
 
 .side {
   flex: 30%;
-  padding: 20px 30px 20px 30px;
 }
 
+.vl{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  flex: 1%;
+  border-left: 3px solid black;
+}
 .main {
-  flex: 70%;
-  padding: 20px 30px 20px 30px;
+  flex: 69%;
 }
-
-/*.vl {*/
-  /*border-left: 2px solid black;*/
-/*}*/
