--- a/medical-app/src/app/patients/components/patient-create-header/patient-create-header.component.css
+++ b/medical-app/src/app/patients/components/patient-create-header/patient-create-header.component.css
@@ -1,8 +1,13 @@
-.container{
-  padding-bottom: 15px;
+.sticky-top{
+  padding: 0 30px 0 15px;
+}
+
+.header{
+  padding: 20px 15px 35px 15px;
   background-color: white;
   border-bottom: 2px solid black;
 }
+
 .btn{
   border-width: 2px;
   border-radius: 0;
