--- a/medical-app/src/app/patients/components/patient-details-header/patient-details-header.component.css
+++ b/medical-app/src/app/patients/components/patient-details-header/patient-details-header.component.css
@@ -1,5 +1,9 @@
-.container{
-  padding-bottom: 15px;
+.sticky-top{
+  padding: 0 30px 0 15px;
+}
+
+.header{
+  padding: 20px 15px 35px 15px;
   background-color: white;
   border-bottom: 2px solid black;
 }
