--- a/medical-app/src/app/comments/components/create-comment-block/create-comment-block.component.html
+++ b/medical-app/src/app/comments/components/create-comment-block/create-comment-block.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-between">
 
-  <div class="col-8">
+  <div [ngClass]="{'col-8': edit, 'col-10': !edit}">
     <section>
       <form novalidate [formGroup]="commentForm">
         <fieldset>
@@ -25,7 +25,7 @@
   </div>
 
   <ng-template #create>
-    <div class="col-4">
+    <div class="col-2">
       <button class="btn btn-primary btn-outline-dark" type="button" (click)="addComment()">Add</button>
     </div>
   </ng-template>
