--- a/medical-app/src/app/patients/components/patient-details/patient-details.component.html
+++ b/medical-app/src/app/patients/components/patient-details/patient-details.component.html
@@ -1,6 +1,8 @@
 <div class="container">
-  <app-patient-details-header [patient]="patient"></app-patient-details-header>
 
+  <div class="header">
+  <app-patient-details-header [patient]="patient"></app-patient-details-header>
+  </div>
 
   <div class="row main-content">
 
