--- a/medical-app/src/app/app.component.css
+++ b/medical-app/src/app/app.component.css
@@ -1,9 +1,11 @@
 .row {
   display: flex;
   flex-wrap: wrap;
+  height: 100%;
 }
 
 .side {
+  height: 100%;
   flex: 30%;
 }
 
@@ -12,7 +14,13 @@
   margin-bottom: 10px;
   flex: 1%;
   border-left: 3px solid black;
+
 }
 .main {
+  height: 100%;
   flex: 69%;
+}
+
+main{
+  height: 100%;
 }
