--- a/medical-app/src/app/patients/components/patient-details-header/patient-details-header.component.css
+++ b/medical-app/src/app/patients/components/patient-details-header/patient-details-header.component.css
@@ -6,11 +6,10 @@
   padding: 20px 15px 35px 15px;
   background-color: white;
   border-bottom: 2px solid black;
+  height: 100%;
 }
 
 .btn{
-  border-width: 2px;
-  border-radius: 0;
   margin-left:5%;
 }
 
