--- a/medical-app/src/app/patients/components/patient-list/patient-list.component.html
+++ b/medical-app/src/app/patients/components/patient-list/patient-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="search-block sticky-top">
+  <div class="header sticky-top">
 
     <div class="row align-items-center">
 
