Fix alert component position

--- a/medical-app/src/app/alert/alert.component.html
+++ b/medical-app/src/app/alert/alert.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let alert of alerts" class="alert alert-info alert-dismissible" role="alert" data-auto-dismiss="1000">
-  {{alert}}
+<div *ngFor="let alert of alerts" class="alert alert-info alert-dismissible"
+     role="alert" data-auto-dismiss="1000">{{alert}}
+
   <a class="close" (click)="removeAlert(alert)">&times;</a>
 </div>
