--- a/medical-app/src/app/patients/components/patient-details/patient-details.component.html
+++ b/medical-app/src/app/patients/components/patient-details/patient-details.component.html
@@ -39,14 +39,17 @@
 
     </div>
 
+
+
     <div class="comments-block">
       <app-comments-block></app-comments-block>
-
-      <alert></alert>
 
     </div>
 
   </div>
+
+
+  <alert class="sticky-top"></alert>
 
 
 </div>
